--- a/src/css/core/global.less
+++ b/src/css/core/global.less
@@ -1,12 +1,20 @@
+// Variables
+
+// Colors
+@background-dark-gray: #5d5c5e;
+@divider-light-gray: #dddddd;
+@florocent-green: #2effb5;
+@light-gray: #f2f2f2;
+@white: #ffffff;
+@font-dark-gray: #757575;
+
+@color-primary: @florocent-green;
+@color-secondary: @background-dark-gray;
+// Fonts
+
 .transform(@prop) {
     -webkit-transform: @prop;
     -moz-transform: @prop;
     transform: @prop;
 }
 
-.active-link-style(@color: #555, @bg: #e5e5e5, @shadow: rgba(0,0,0,0.125)){
-    color: @color;
-    text-decoration: none;
-    background-color: @bg;
-    box-shadow: inset 0 3px 8px @shadow;
-}
