Fixed asset url issue

--- a/src/components/pages/home/footerpanel/footerpanel.less
+++ b/src/components/pages/home/footerpanel/footerpanel.less
@@ -35,6 +35,9 @@ footer {
     	}
     	a {
     		margin-right: 10px;
+    		&:hover {
+    			text-decoration: none;
+    		}
     		&:last-child {
     			margin-right: 0;
     		}
