--- a/src/components/pages/home/footerpanel/footerpanel.html
+++ b/src/components/pages/home/footerpanel/footerpanel.html
@@ -23,16 +23,16 @@
 		<p class="pull-left">Copyright &copy; 2017 Deloitte Development LLC. All rights reserved.</p>
 		<div class="pull-right">
 			<a href="#">
-				<i class="social-icons fa fa-facebook-official" aria-hidden="true"></i>
+				<img src="/assets/facebook/facebook.png"/>
 			</a>
 			<a href="#">
-				<i class="social-icons fa fa-twitter-square" aria-hidden="true"></i>
+				<img src="/assets/twitter/twitter.png"/>
 			</a>
 			<a href="#">
-				<i class="social-icons fa fa-instagram" aria-hidden="true"></i>
+				<img src="/assets/instagram/instagram.png"/>
 			</a>
 			<a href="#">
-				<i class="social-icons fa fa-envelope-square" aria-hidden="true"></i>
+				<img src="/assets/message/message.png"/>
 			</a>
 		</div>
 	</div>
