--- a/src/components/pages/home/carouselpanel/carouselpanel.less
+++ b/src/components/pages/home/carouselpanel/carouselpanel.less
@@ -20,4 +20,57 @@
         color: #757575;
         margin-bottom: 50px;
     }
+
+    .slick-container {
+        width: 100%;
+        border: 1px solid gray;
+        margin: auto;
+        padding: 15px;
+        border: 0;
+
+        .slick-item {
+            width: 360px;
+            height: 370px;
+            border-radius: 5px;
+            background-color: #ffffff;
+            margin: 10px;
+            padding: 10px;
+        }
+
+        .tile-icon {
+            margin-left: auto;
+            margin-right: auto;
+            display: block;
+        }
+
+        .tile-heading {
+            font-family: Montserrat;
+            font-size: 24px;
+            letter-spacing: 3px;
+            text-align: left;
+            color: #757575;
+        }
+
+        .tile-desc {
+            font-family: Montserrat;
+            font-size: 14px;
+            font-weight: 300;
+            line-height: 1.57;
+            letter-spacing: 1.8px;
+            text-align: left;
+            color: #757575;
+        }
+    }
+
+    .slick-prev .slick-arrow {
+        width: 50px;
+        height: 50px;
+        background-color: #f9f9f9;
+
+        &:before, &:after {
+            width: 50px;
+            height: 50px;
+            background-color: #f9f9f9;
+        }
+    }
 }
