--- a/src/components/pages/home/judgepanel/judgepanel.less
+++ b/src/components/pages/home/judgepanel/judgepanel.less
@@ -1,2 +1,40 @@
 @import url(../../../../css/core/global.less);
 
+judge-panel{
+    text-align: center;
+    display: block;
+    padding: 50px 0px;
+    .title{
+        font-family: Montserrat;
+        font-size: 32px;
+        font-weight: 600;
+        letter-spacing: 4px;        
+        color: @font-dark-gray;
+    }
+    .sub-title{
+        font-family: Montserrat;
+        font-size: 14px;
+        font-weight: 300;
+        letter-spacing: 1.8px;        
+        color: @font-dark-gray;
+        max-width: 700px;
+        margin: auto;
+    }
+    .profile-list{
+        min-height: 200px;
+        padding-bottom: 20px;
+        border-bottom: 1px solid #dddddd;
+    }
+    .info{
+        padding:50px 0px;
+        max-width: 700px;
+        margin: auto;
+        font-family: Montserrat;
+        font-size: 14px;
+        font-weight: 300;
+        line-height: 1.57;
+        letter-spacing: 1.8px;
+        text-align: center;
+        color: @font-dark-gray;
+    }
+}
