--- a/src/css/core/global.less
+++ b/src/css/core/global.less
@@ -18,3 +18,27 @@
     transform: @prop;
 }
 
+.btn{
+    height: 45px;
+    border-radius: 100px;
+    border: solid 1px @color-primary;
+    background: @color-primary;
+    font-family: Montserrat;
+    font-size: 16px;
+    font-weight: 600;
+    letter-spacing: 2px;
+    color: #4a4a4a;
+    text-transform: uppercase;
+}
+.btn-inverse{
+    width: 133.1px;
+    height: 45px;
+    border-radius: 100px;
+    border: solid 1px @color-primary;
+    background: transparent;
+    font-family: Montserrat;
+    font-size: 16px;
+    font-weight: 600;
+    letter-spacing: 2px;
+    color: @color-primary;
+}
