--- a/src/css/core/global.less
+++ b/src/css/core/global.less
@@ -10,12 +10,9 @@
 
 @color-primary: @florocent-green;
 @color-secondary: @background-dark-gray;
-// Fonts
 
-.transform(@prop) {
-    -webkit-transform: @prop;
-    -moz-transform: @prop;
-    transform: @prop;
+body {
+    font-family: "Montserrat";
 }
 
 .btn{
