--- a/src/components/pages/home/carouselpanel/carouselpanel.less
+++ b/src/components/pages/home/carouselpanel/carouselpanel.less
@@ -1,23 +1,21 @@
 @import url(../../../../css/core/global.less);
 
 .carousel-container {
-    background: #f2f2f2;
+    background: @light-gray;
     text-align: center;
     padding: 50px 90px 60px 90px;
     .carousel-heading {
-        font-family: Montserrat;
         font-size: 32px;
         font-weight: 600;
         letter-spacing: 4px;
-        color: #757575;
+        color: @font-dark-gray;
     }
     
     .carousel-subheading {
-        font-family: Montserrat;
         font-size: 14px;
         font-weight: 300;
         letter-spacing: 1.8px;
-        color: #757575;
+        color: @font-dark-gray;
         margin-bottom: 50px;
     }
 
@@ -80,7 +78,6 @@
         }
 
         .tile-desc {
-            font-family: Montserrat;
             font-size: 14px;
             font-weight: 300;
             line-height: 1.57;
