--- a/src/components/pages/home/footerpanel/footerpanel.less
+++ b/src/components/pages/home/footerpanel/footerpanel.less
@@ -1,5 +1,5 @@
 @import url(../../../../css/core/global.less);
-@border: 1px solid #dddddd;
+@border: 1px solid @divider-light-gray;
 
 footer {
 	padding: 40px 40px 23px;
@@ -9,10 +9,9 @@ footer {
     	padding: 13.5px 17.5px 55px;
     	border-bottom: @border;
     	.col-title {
-    		font-family: Montserrat;
   			font-size: 20px;
   			letter-spacing: 2.5px;
-  			color: #757575;
+  			color: @font-dark-gray;
     	}
     	.col-desc {
     		font-size: 14px;
@@ -20,7 +19,7 @@ footer {
 			line-height: 1.57;
 			letter-spacing: 1.8px;
 			text-align: left;
-			color: #757575;
+			color: @font-dark-gray;
     	}
     }
     .copyrightDetails {
